# beerTap-controller

./: README.md  platformio.ini
.pio/libdeps/esp32-s3-devkitc-1-myboard/: lv_conf.h
BeerTap-Squareline/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
BeerTap-Squareline/UIFiles/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_BeerPouring.c  ui_Configuration.c  ui_Home.c  ui_KegConfig.c  ui_Loading.c  ui_QRCode.c  ui_WifiConfig.c  ui_events.c  ui_events.h  ui_img_beertaplogo_png.c  ui_img_image1_png.c  ui_img_image2_png.c  ui_img_image3_png.c  ui_img_qrcode_png.c
include/: beer_state_manager.h  brightness_manager.h  constants.h  display_driver.h  lv_conf.h  qr_code_generator.h  screen_manager.h
include/lvgl/: lvgl.h
lib/BeerPourHelper/include/: beer_pour_helper.h
lib/BeerPourHelper/src/: beer_pour_helper.cpp
lib/MPU6050_Helper/include/: mpu6050_helper.h
lib/MPU6050_Helper/src/: mpu6050_helper.cpp
lib/QRCodeHelper/include/: qr_code_helper.h
lib/QRCodeHelper/src/: qr_code_helper.cpp
lib/WiFiConfigHelper/include/: wifi_config_helper.h
lib/WiFiConfigHelper/src/: wifi_config_helper.cpp
src/: beer_state_manager.cpp  brightness_manager.cpp  display_driver.cpp  gfx_conf.h  main.cpp  qr_code_generator.cpp  screen_manager.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_BeerPouring.c  ui_Configuration.c  ui_Home.c  ui_KegConfig.c  ui_Loading.c  ui_QRCode.c  ui_WiFiStatus.c  ui_WifiConfig.c  ui_comp_hook.c  ui_events.cpp  ui_events.h  ui_img_beercan_png.c  ui_img_beertaplogo_png.c  ui_videoAnimation.c
(+2 files in other folders)
